...      midnight-dev playing Black: 1319 - 1410 - 2162  [0.491] 4891
...      White vs Black: 2863 - 2498 - 4423  [0.519] 9784
Elo difference: 6.5 +/- 5.1, LOS: 99.4 %, DrawRatio: 45.2 %
SPRT: llr 2.96 (100.5%), lbound -2.94, ubound 2.94 - H1 was accepted

Antares makes my LMR a lot better
Score of midnight-dev vs midnight-latest: 93 - 39 - 123  [0.606] 255
...      midnight-dev playing White: 50 - 18 - 60  [0.625] 128
...      midnight-dev playing Black: 43 - 21 - 63  [0.587] 127
...      White vs Black: 71 - 61 - 123  [0.520] 255
Elo difference: 74.7 +/- 30.7, LOS: 100.0 %, DrawRatio: 48.2 %
SPRT: llr 2.98 (101.1%), lbound -2.94, ubound 2.94 - H1 was accepted

Update History Heuristic
Score of midnight-dev vs midnight-latest: 639 - 552 - 1044  [0.519] 2235
...      midnight-dev playing White: 352 - 256 - 510  [0.543] 1118
...      midnight-dev playing Black: 287 - 296 - 534  [0.496] 1117
...      White vs Black: 648 - 543 - 1044  [0.523] 2235
Elo difference: 13.5 +/- 10.5, LOS: 99.4 %, DrawRatio: 46.7 %
SPRT: llr 2.97 (100.8%), lbound -2.94, ubound 2.94 - H1 was accepted

Profile Code and added incremental sel sort + slower time checks
Score of midnight-dev vs midnight-latest: 134 - 75 - 183  [0.575] 392
...      midnight-dev playing White: 74 - 33 - 89  [0.605] 196
...      midnight-dev playing Black: 60 - 42 - 94  [0.546] 196
...      White vs Black: 116 - 93 - 183  [0.529] 392
Elo difference: 52.7 +/- 25.2, LOS: 100.0 %, DrawRatio: 46.7 %
SPRT: llr 2.96 (100.6%), lbound -2.94, ubound 2.94 - H1 was accepted

Late Move Pruning
Score of midnight-dev vs midnight-latest: 309 - 239 - 458  [0.535] 1006
...      midnight-dev playing White: 163 - 104 - 235  [0.559] 502
...      midnight-dev playing Black: 146 - 135 - 223  [0.511] 504
...      White vs Black: 298 - 250 - 458  [0.524] 1006
Elo difference: 24.2 +/- 15.8, LOS: 99.9 %, DrawRatio: 45.5 %
SPRT: llr 2.95 (100.2%), lbound -2.94, ubound 2.94 - H1 was accepted